<resources>
    <string name="app_name">Calendar</string>
    <string name="title">Event Name</string>
    <string name="st">From</string>
    <string name="et">To</string>
    <string name="day">Day</string>
    <string name="month">Month</string>
    <string name="year">Year</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="quer">Query </string>

    <string name="drawer_open">open</string>
    <string name="drawer_close">close</string>
    <string name="action_home">Home</string>
    <string name="action_mycal">My Calendar</string>
    <string name="action_friends">Friends</string>
    <string name="action_meeting">Create Meeting</string>
        <string name="title_activity_friends_list">Friends</string>
    <string name="title_activity_my_calendar">My Calendar</string>
    <string name="upcoming">Upcoming Events</string>
    <string name="title_activity_add_to_calendar">Add Event</string>
    <string name="title_activity_friends__calendar">Friends Calendar</string>

    <string name="hometitle">Upcoming Schedule</string>

    <string name="event">Event</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="date">Date</string>
    <string name="onetime">One Time Event</string>
    <string name="sun">Sun.</string>
    <string name="mon">Mon.</string>
    <string name="tue">Tues.</string>
    <string name="wed">Wed.</string>
    <string name="Thur">Thur.</string>
    <string name="fri">Fri.</string>
    <string name="sat">Sat.</string>

    <string name="add">Add Event</string>
    <string name="clear">Clear</string>
    <string name="location">Location</string>

    <string-array name="days">
        <item></item>
        <item>Sunday</item>
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
        <item>Saturday</item>
    </string-array>
</resources>
